// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionDropdown should render "no option" item when items array is empty 1`] = `
<div
  className="dropdown btn-group btn-group-default"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="theme-tc-dropdown-button tc-dropdown-button dropdown-toggle btn btn-default"
    disabled={false}
    id="dropdown-id"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span
      className="tc-dropdown-button-title"
    >
      <span
        className="tc-dropdown-button-title-label"
      >
        related items
      </span>
    </span>
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-id"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className="disabled"
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        No options
      </a>
    </li>
  </ul>
</div>
`;

exports[`ActionDropdown should render a button with "link" theme 1`] = `
<div
  className="dropdown btn-group btn-group-link"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="theme-tc-dropdown-button tc-dropdown-button dropdown-toggle btn btn-link"
    disabled={false}
    id="dropdown-id"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span
      className="tc-dropdown-button-title"
    >
      <span
        className="tc-dropdown-button-title-label"
      >
        related items
      </span>
    </span>
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-id"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        icon="talend-icon"
        label="document 1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-icon"
          />
        </svg>
        document 1
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        label="document 2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        document 2
      </a>
    </li>
  </ul>
</div>
`;

exports[`ActionDropdown should render a button with icon 1`] = `
<div
  className="dropdown btn-group btn-group-default"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="theme-tc-dropdown-button tc-dropdown-button dropdown-toggle btn btn-default"
    disabled={false}
    id="dropdown-id"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseOver={[Function]}
    role="button"
    type="button"
  >
    <span
      className="tc-dropdown-button-title"
    >
      <i
        aria-hidden="true"
        className="fa fa-file-excel-o"
        focusable="false"
        title={null}
      />
    </span>
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-id"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        icon="talend-icon"
        label="document 1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-icon"
          />
        </svg>
        document 1
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        label="document 2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        document 2
      </a>
    </li>
  </ul>
</div>
`;

exports[`ActionDropdown should render a button with icon and label 1`] = `
<div
  className="dropdown btn-group btn-group-default"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="theme-tc-dropdown-button tc-dropdown-button dropdown-toggle btn btn-default"
    disabled={false}
    id="dropdown-id"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span
      className="tc-dropdown-button-title"
    >
      <i
        aria-hidden="true"
        className="fa fa-file-excel-o"
        focusable="false"
        title={null}
      />
      <span
        className="tc-dropdown-button-title-label"
      >
        related items
      </span>
    </span>
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-id"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        icon="talend-icon"
        label="document 1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-icon"
          />
        </svg>
        document 1
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        label="document 2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        document 2
      </a>
    </li>
  </ul>
</div>
`;

exports[`ActionDropdown should render a button with label 1`] = `
<div
  className="dropdown btn-group btn-group-default"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="theme-tc-dropdown-button tc-dropdown-button dropdown-toggle btn btn-default"
    disabled={false}
    id="dropdown-id"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span
      className="tc-dropdown-button-title"
    >
      <span
        className="tc-dropdown-button-title-label"
      >
        related items
      </span>
    </span>
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-id"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        icon="talend-icon"
        label="document 1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-icon"
          />
        </svg>
        document 1
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        label="document 2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        document 2
      </a>
    </li>
  </ul>
</div>
`;
